--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="rough.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>ACCORDIAN</title>
   </head>
   <body>
